--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,10 +56,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - uses: actions/download-artifact@v2
         with:
           name: solaredge-exporter-linux-arm
@@ -74,12 +70,17 @@ jobs:
           path: ./bld
       - name: Fix permissions
         run: chmod +x bld/*
+      - uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
       - uses: docker/metadata-action@v3
         id: docker_meta
         with:
-          images: clambin/solaredge-exporter
+          images: ghcr.io/clambin/solaredge-exporter
           tags: |
             type=sha
             type=semver,pattern={{version}}
