--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,12 +74,13 @@ jobs:
       - uses: docker/setup-buildx-action@v1
       - uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - uses: docker/metadata-action@v3
         id: docker_meta
         with:
-          images: clambin/solaredge-exporter
+          images: ghcr.io/clambin/solaredge-exporter
           tags: |
             type=sha
             type=semver,pattern={{version}}
@@ -112,9 +113,3 @@ jobs:
           tag: ${{ github.ref }}
           overwrite: true
           file_glob: true
-      - name: Docker Hub Description
-        uses: peter-evans/dockerhub-description@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-          repository: clambin/solaredge-exporter
