build: set up simplication

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,19 +97,18 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2.3.4
       - uses: actions/download-artifact@v2
         with:
           path: ./artifacts
       - name: Move binaries into place
         run: |
+          find artifacts -type f -print
           mkdir bld
           mv artifacts/*/* bld
-      - name: Upload binaries to release
-        uses: svenstaro/upload-release-action@v2
+      - uses: marvinpinto/action-automatic-releases@v1.2.1
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: bld/*
-          tag: ${{ github.ref }}
-          overwrite: true
-          file_glob: true
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          prerelease: false
+          files: |
+            bld/*
