--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,18 +58,12 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v2
         with:
-          name: solaredge-exporter-linux-arm
-          path: ./bld
-      - uses: actions/download-artifact@v2
-        with:
-          name: solaredge-exporter-linux-arm64
-          path: ./bld
-      - uses: actions/download-artifact@v2
-        with:
-          name: solaredge-exporter-linux-amd64
-          path: ./bld
-      - name: Fix permissions
-        run: chmod +x bld/*
+          path: ./artifacts
+      - name: Move artifacts in place an fix permissions
+        run: |
+          mkdir bld
+          find ./artifacts -type f -exec cp {} ./bld \;
+          chmod +x bld/*
       - uses: docker/setup-qemu-action@v1
       - uses: docker/setup-buildx-action@v1
       - uses: docker/login-action@v1
@@ -103,7 +97,6 @@ jobs:
           path: ./artifacts
       - name: Move binaries into place
         run: |
-          find artifacts -type f -print
           mkdir bld
           mv artifacts/*/* bld
       - uses: marvinpinto/action-automatic-releases@v1.2.1
