--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,102 +6,7 @@ on:
       - 'v*'
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-        with:
-          go-version: 1.17
-      - name: test
-        run: |
-          go test ./... -race -coverprofile=coverage.txt -covermode=atomic
-      - uses: codecov/codecov-action@v2.1.0
-        with:
-          file: coverage.txt
-          token: ${{ secrets.CODECOV_TOKEN }}
-  build:
-    needs: test
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        target: [ solaredge-exporter ]
-        platform: [ linux ]
-        arch: [ amd64, arm, arm64 ]
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-        with:
-          go-version: 1.17
-      - name: Version number
-        id: vars
-        run: echo ::set-output name=tag::${GITHUB_REF##*/}
-      - name: build
-        env:
-          TARGET: ${{ matrix.target }}
-          GOOS: ${{ matrix.platform }}
-          GOARCH: ${{ matrix.arch }}
-          RELEASE_VERSION: ${{ steps.vars.outputs.tag }}
-        run: |
-          CGO_ENABLED=0 go build \
-            -ldflags "-X github.com/$GITHUB_REPOSITORY/version.BuildVersion=$RELEASE_VERSION" \
-            -o bld/$TARGET-$GOOS-$GOARCH \
-            $TARGET.go
-      - uses: actions/upload-artifact@v2
-        with:
-          name: ${{ matrix.target }}-${{ matrix.platform }}-${{ matrix.arch }}
-          path: ./bld/*
-  docker:
-    needs:  build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/download-artifact@v2
-        with:
-          path: ./artifacts
-      - name: Move artifacts in place an fix permissions
-        run: |
-          mkdir bld
-          find ./artifacts -type f -exec cp {} ./bld \;
-          chmod +x bld/*
-      - uses: docker/setup-qemu-action@v1
-      - uses: docker/setup-buildx-action@v1
-      - uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: docker/metadata-action@v3
-        id: docker_meta
-        with:
-          images: ghcr.io/clambin/solaredge-exporter
-          tags: |
-            type=sha
-            type=semver,pattern={{version}}
-      - name: Docker build
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          file: ./build/Dockerfile
-          platforms: linux/amd64,linux/arm,linux/arm64
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.docker_meta.outputs.tags }}
-          labels: ${{ steps.docker_meta.outputs.labels }}
-  publish:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2.3.4
-      - uses: actions/download-artifact@v2
-        with:
-          path: ./artifacts
-      - name: Move binaries into place
-        run: |
-          mkdir bld
-          mv artifacts/*/* bld
-      - uses: marvinpinto/action-automatic-releases@v1.2.1
-        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: false
-          files: |
-            bld/*
+  release:
+    uses: clambin/workflows/.github/workflows/release.yaml@main
+    with:
+      target: solaredge-exporter
