--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,16 +4,16 @@ on:
   push:
     branches:
       - master
-      - codecov
+      - http
 
 jobs:
   test:
-    uses: clambin/workflows/.github/workflows/test.yaml@go122
+    uses: clambin/workflows/.github/workflows/test.yaml@main
     secrets:
       codecov-token: ${{ secrets.CODECOV_TOKEN }}
   build:
     needs:
       - test
-    uses: clambin/workflows/.github/workflows/build.yaml@go122
+    uses: clambin/workflows/.github/workflows/build.yaml@main
     with:
       target: solaredge-exporter
