--- a/.github/workflows/codeql-analysis.yaml
+++ b/.github/workflows/codeql-analysis.yaml
@@ -15,7 +15,7 @@ on:
   push:
     branches:
       - master
-      - develop
+      - http
   pull_request:
     # The branches below must be a subset of the branches above
     branches:
