--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,16 +7,16 @@ on:
 
 jobs:
   test:
-    uses: clambin/workflows/.github/workflows/test.yaml@go122
+    uses: clambin/workflows/.github/workflows/test.yaml@main
     secrets:
       codecov-token: ${{ secrets.CODECOV_TOKEN }}
   build:
     needs:
       - test
-    uses: clambin/workflows/.github/workflows/build.yaml@go122
+    uses: clambin/workflows/.github/workflows/build.yaml@main
     with:
       target: solaredge-exporter
   release:
     needs:
       - build
-    uses: clambin/workflows/.github/workflows/release.yaml@go122
+    uses: clambin/workflows/.github/workflows/release.yaml@main
